# dotenv-space-cli

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  tarpaulin-report.html
.github/workflows/: ci.yml  release.yml
benches/: cli_benchmarks.rs
scripts/: install.sh  test.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: backup.rs  convert.rs  doctor.rs  init.rs  migrate.rs  mod.rs  restore.rs  scan.rs  template.rs  validate.rs
src/commands/add/: blueprint.rs  custom.rs  framework.rs  mod.rs  service.rs  shared.rs
src/commands/init/: architect.rs  blank.rs  blueprint.rs  mod.rs  shared.rs
src/core/: config.rs  converter.rs  mod.rs  parser.rs
src/formats/: aws.rs  azure.rs  docker.rs  doppler.rs  gcp.rs  github.rs  heroku.rs  json.rs  kubernetes.rs  mod.rs  railway.rs  shell.rs  terraform.rs  vercel.rs  yaml.rs
src/schema/: formatter.rs  loader.rs  mod.rs  models.rs  query.rs  resolver.rs
src/templates/: mod.rs
src/utils/: fs.rs  git.rs  mod.rs  patterns.rs  string.rs  ui.rs
tests/: add_integration.rs  init_integration.rs  schema_integration.rs  schema_unit.rs  tests.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/integration/: tests.rs
