[package]
name = "dotenv-space-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ajit Kumar <ajitkumar.pu@gmail.com>"]
description = "A comprehensive CLI tool for managing .env files — validation, secret scanning, and format conversion"
repository = "https://github.com/urwithajit9/dotenv-space"
homepage = "https://dotenv.space"
documentation = "https://dotenv.space"
keywords = ["env", "dotenv", "secrets", "cli", "devops"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "dotenv-space"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "cargo", "env"] }
clap_complete = "4"

# Interactive prompts
dialoguer = "0.11"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Core utilities
regex = "1"
lazy_static = "1"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# File system
glob = "0.3"
walkdir = "2"

# Crypto (for Phase 3 backup/restore)
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
base64 = "0.21"

# HTTP client (for Phase 2 migrate)
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
default = ["migrate", "backup"]
migrate = ["reqwest"]
backup = ["aes-gcm", "argon2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true